# factories

./: .gitignore  Cargo.toml  config.example.toml  export_game_data.lua  export_recipes.lua  game_data.json  mermaid.html  recipes.json
src/: analyze.rs  config.rs  editor.rs  flowchart.rs  game_data.rs  info.rs  lib.rs  machine.rs  main.rs  prelude.rs  primitives.rs  snippet.rs
src/ui/: app.rs  app_ui.rs  drop_down.rs  mod.rs  tracing_layer.rs  ui_ext.rs
