[package]
name = "factories"
version = "0.1.0"
edition = "2021"
default-run = "factories"

[dependencies]
anyhow = "1.0.98"
arboard = "3.5.0"
derive_more = { version = "2.0.1", features = ["full"] }
eframe = "0.31.1"
egui-dropdown = "0.13.0"
egui_extras = { version = "0.31.1", features = ["file", "image"] }
fallible-iterator = "0.3.0"
fs-err = "3.1.0"
image = { version = "0.25.6", features = ["png"] }
itertools = "0.14.0"
nalgebra = "0.33.2"
open = "5.3.2"
ordered-float = { version = "5.0.0", features = ["serde"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"
tracing = { version = "0.1.41" }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
